# enphase-api

./: .clippy.toml  .envrc  .gitignore  .pre-commit-config.yaml  .yamlfix.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  cliff.toml  prek.toml  release-plz.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/instructions/: rust.instructions.md
.github/workflows/: release-plz.yml  test.yml
fixtures/entrez/: generate-token-success.json  login-failure.json  login-success.json
fixtures/envoy/: authenticate-invalid.json  authenticate-valid.json  get-power.json  set-power-on.json
scripts/: generate-fixtures  util.sh
src/: client.rs  error.rs  lib.rs  models.rs
src/client/: entrez.rs  envoy.rs
tests/integration/: entrez.rs  envoy.rs  main.rs
